dev/08-backend-apis/middleware/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-apis
  labels:
    name: backend-apis
    environment: dev
